# mobile_app

./: .env.bstack_android  .env.bstack_credential.example  .env.local_emulator  .env.local_real  .gitignore  README.md  config.py  pyproject.toml
mobile_app_tests/models/: applications.py
mobile_app_tests/models/pages/my_expenses/: __init__.py  main_menu.py  main_page.py  start_pages.py
mobile_app_tests/utils/: path.py
my_expenses_tests/models/: applications.py
my_expenses_tests/models/pages/: __init__.py  main_menu.py  main_page.py  new_expense.py  start_pages.py
my_expenses_tests/utils/: date_time.py  money.py  path.py
tests/: conftest.py  test_my_expenses.py  test_my_expenses_main_page.py  test_my_expenses_start_pages.py
tests/android_app/: test_my_expenses.py
